[Chromium] Fix broken DRT build for Aura Linux https://bugs.webkit.org/show_bug.cgi?id=72667

Reviewed by Tony Chang.

Source/WebKit/chromium:

* WebKit.gyp:

Tools:

DRT now builds for Aura Linux. This, more or less, shares the same code as Android.

The following changes have been made:

  1. Renamed TestShellAndroid to TestShellLinux.
  2. Stub code moved added in TestShellStub that will only compile on non-GTK Linux builds.
  3. Code common to Gtk, Aura, and Android moved to TestShellLinux.

* DumpRenderTree/DumpRenderTree.gypi:
* DumpRenderTree/chromium/EventSender.cpp:
(EventSender::keyDown):
* DumpRenderTree/chromium/TestShellAndroid.cpp: Removed.
* DumpRenderTree/chromium/TestShellGtk.cpp:
* DumpRenderTree/chromium/TestShellLinux.cpp: Copied from Tools/DumpRenderTree/chromium/TestShellGtk.cpp.
(AlarmHandler):
(TestShell::waitTestFinished):
(setupFontconfig):
(platformInit):
* DumpRenderTree/chromium/TestShellStub.cpp: Added.
(checkLayoutTestSystemDependencies):
(openStartupDialog):


Canonical link: https://commits.webkit.org/89945@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@101464 268f45cc-cd09-0410-ab3c-d52691b4dbfc